# quantigpt

./: .gitignore  README.md  annotation_analysis.py  candidate_sentence_finder.py  flake.nix  labelstudio.xml  pattern-matches-statistics.sh  patterns.json  predict_statements.json  predict_validation.json  pyproject.toml  quantigpt_statistics.py  requirements.txt  restorer_from_input_file.py  schema.json  statistics.py
data/: output-args-with-wiki-tables.json  output-args.json  output-kialo.json
data/statistics/: operators_args.csv  operators_kialo.csv  preliminary_output.txt  probing.csv  results_regex_rated.csv  results_string_rated.csv
quantigpt/: app.py
