[tool.poetry]
name = "quantigpt"
version = "0.1.0"
description = "Extract quantitative information from text."
authors = ["Mirko Lenz <mirko@mirkolenz.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "quantigpt" }]
repository = "https://github.com/recap-utr/quantiqpt"

[tool.poetry.scripts]
quantigpt = "quantigpt.app:app"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
openai = "^1.23"
typer = "^0.12"
orjson = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
